--- a/.eslintrc
+++ b/.eslintrc
@@ -25,9 +25,11 @@
     },
     "extends": "eslint:recommended",
     "ecmaFeatures": {
-
+        "jsx": true,
+        "experimentalObjectRestSpread": true,
+        "modules": true
     },
     "plugins": [
-
+        "react"
     ]
 }
