--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "serve": "webpack-dev-server --content-base public/ --inline --hot --progress --colors --host=test.flickr.dev --port=3001"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
