--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
   "dependencies": {
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
+    "cors": "^2.7.1",
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "morgan": "~1.6.1",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "request": "^2.67.0",
-    "serve-favicon": "~2.3.0"
+    "reqwest": "^2.0.5",
+    "serve-favicon": "~2.3.0",
+    "superagent": "^1.6.1"
   },
   "devDependencies": {
     "babel-core": "^6.3.21",
