--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "superagent": "^1.6.1"
   },
   "devDependencies": {
+    "autoprefixer-loader": "^3.1.0",
     "babel-core": "^6.3.21",
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.3.13",
