--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "cors": "^2.7.1",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "history": "^1.13.1",
     "morgan": "~1.6.1",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
+    "react-router": "^1.0.2",
     "request": "^2.67.0",
     "reqwest": "^2.0.5",
     "serve-favicon": "~2.3.0",
