--- a/package.json
+++ b/package.json
@@ -3,24 +3,15 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "serve": "webpack-dev-server --content-base public/ --inline --hot --progress --colors --host=test.flickr.dev --port=3001"
+    "start": "node server"
   },
   "dependencies": {
-    "body-parser": "~1.13.2",
-    "cookie-parser": "~1.3.5",
-    "cors": "^2.7.1",
-    "debug": "~2.2.0",
+    "babel-register": "^6.3.13",
     "express": "~4.13.1",
-    "history": "^1.13.1",
-    "morgan": "~1.6.1",
+    "history": "^1.17.0",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
-    "react-router": "^1.0.2",
-    "request": "^2.67.0",
-    "reqwest": "^2.0.5",
-    "serve-favicon": "~2.3.0",
-    "superagent": "^1.6.1"
+    "react-router": "^1.0.3"
   },
   "devDependencies": {
     "autoprefixer-loader": "^3.1.0",
@@ -34,6 +25,10 @@
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.14.0"
+    "webpack-dev-server": "^1.14.0",
+    "webpack-dev-middleware": "^1.4.0",
+    "webpack-hot-middleware": "^2.6.0",
+    "babel-plugin-add-module-exports": "^0.1.2",
+    "babel-preset-stage-0": "^6.3.13"
   }
 }
