--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node server",
-    "build": "NODE_ENV=production webpack --config ./webpack.production.config.js --progress --profile --colors"
+    "build": "NODE_ENV=production webpack --config ./webpack.production.config.js --progress --profile --colors",
+    "postinstall": "npm i -g webpack && npm build"
   },
   "dependencies": {
     "babel-register": "^6.3.13",
