--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node server",
     "build": "NODE_ENV=production webpack --config ./webpack.production.config.js --progress --profile --colors",
-    "postinstall": "npm i -g webpack && npm build"
+    "postinstall": "npm run build"
   },
   "dependencies": {
     "babel-register": "^6.3.13",
