--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "babel-register": "^6.3.13",
+    "compression": "^1.6.0",
     "express": "~4.13.1",
     "history": "^1.17.0",
     "react": "^0.14.3",
